bug 618870 - CompressedGlyph::SetMissing should not overwrite the clusterStart bit. r=karlt a=roc